# urirun-connector-sheet

./: README.md  local.dev.txt  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
scripts/: ci_urirun_llm_smoke.py
tests/: test_contract.py  test_sheet_core.py
urirun_connector_sheet/: __init__.py  connector.manifest.json  contracts.json  core.py
