[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-sheet"
version = "0.1.0"
description = "Spreadsheet (XLSX/CSV) I/O connector for ifuri and urirun (sheet://)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = ["urirun>=0.4.14"]

[project.optional-dependencies]
xlsx = ["openpyxl>=3.1"]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://connect.ifuri.com/connectors/sheet"
Repository = "https://github.com/if-uri/urirun-connector-sheet"

[project.scripts]
urirun-sheet = "urirun_connector_sheet.core:main"

[project.entry-points."urirun.bindings"]
sheet = "urirun_connector_sheet.core:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_sheet*"]

[tool.setuptools.package-data]
urirun_connector_sheet = ["connector.manifest.json"]
